k8s-aws-argocd/cert-files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - microservice.ssibdev.com.ng
    secretName: acme-crt-prod
  rules:
  - host: microservice.ssibdev.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            namespace: sock-shop 
            port:
              number: 80
